# GraCFL

./: .gitignore  CMakeLists.txt  Graph3DBiConcurrent.cpp  Graph3DBiConcurrent.hpp  LICENSE  README.md  SolverBIGramParallel.cpp  SolverBIGramParallel.hpp
example/: example.cpp
include/gracfl/: BIGracfl.hpp  BIGracflGraph.hpp  BWGracfl.hpp  BWGracflGraph.hpp  FWGracfl.hpp  FWGracflGraph.hpp  GraCFLSolver.hpp
include/solvers/: Solver.hpp  SolverBIGram.hpp  SolverBIGramParallel.hpp  SolverBITopo.hpp  SolverBITopoParallel.hpp  SolverBWGram.hpp  SolverBWGramParallel.hpp  SolverBWTopo.hpp  SolverBWTopoParallel.hpp  SolverBase.hpp  SolverFWGram.hpp  SolverFWGramParallel.hpp  SolverFWTopo.hpp  SolverFWTopoParallel.hpp
include/utils/: Config.hpp  Edges.hpp  Grammar.hpp  Graph.hpp  GraphOld.hpp  Types.hpp
include/utils/graphs/: Graph.hpp  Graph2DBi.hpp  Graph2DBiConcurrent.hpp  Graph2DIn.hpp  Graph2DOut.hpp  Graph3DBi.hpp  Graph3DBiConcurrent.hpp  Graph3DIn.hpp  Graph3DOut.hpp
src/: main.cpp
src/gracfl/: BIGracfl.cpp  BIGracflGraph.cpp  BWGracfl.cpp  BWGracflGraph.cpp  FWGracfl.cpp  FWGracflGraph.cpp  GraCFLSolver.cpp
src/solvers/: Solver.cpp  SolverBIGram.cpp  SolverBIGramParallel.cpp  SolverBITopo.cpp  SolverBITopoParallel.cpp  SolverBWGram.cpp  SolverBWGramParallel.cpp  SolverBWTopo.cpp  SolverBWTopoParallel.cpp  SolverFWGram.cpp  SolverFWGramParallel.cpp  SolverFWTopo.cpp  SolverFWTopoParallel.cpp
src/utils/: Config.cpp  Grammar.cpp  Graph.cpp  GraphOld.cpp
src/utils/graphs/: Graph.cpp  Graph2DBi.cpp  Graph2DBiConcurrent.cpp  Graph2DIn.cpp  Graph2DOut.cpp  Graph3DBi.cpp  Graph3DBiConcurrent.cpp  Graph3DIn.cpp  Graph3DOut.cpp
tests/: CMakeLists.txt  README.md  individual_solver_test.cpp  simple_solver_test.cpp
